# internal/app/api/net/http/handler/api/system/v1/handler.go
@@ -44,7 +44,8 @@ func GetEmbedFiles(fs http.FileSystem) http.Handler {
 // 200: ServerStatsSuccessResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func GetServerStats() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		stats, err := c.Stats()
@@ -64,7 +65,8 @@ func GetServerStats() beanstalk.Handler {
 // 200: TubesSuccessResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func GetTubes() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		tubes, err := c.ListTubes()
@@ -85,7 +87,8 @@ func GetTubes() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func GetTubeStats() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(client beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -114,7 +117,8 @@ func GetTubeStats() beanstalk.Handler {
 // 400: BadRequestResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func CreateJob() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		var request CreateJobRequest
@@ -148,7 +152,8 @@ func CreateJob() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func GetJob() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -183,7 +188,8 @@ func GetJob() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func BuryJob() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -223,7 +229,8 @@ func BuryJob() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func DeleteJob() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -256,7 +263,8 @@ func DeleteJob() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func KickJob() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -290,7 +298,8 @@ func KickJob() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func ReleaseJob() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
@@ -330,7 +339,8 @@ func ReleaseJob() beanstalk.Handler {
 // 404: NotFoundResponse
 //
 // Security:
-// - key: []
+// - bearer: []
+// - cookie: []
 func GetJobStats() beanstalk.Handler {
 	return beanstalk.HandlerFunc(func(c beanstalk.Client, w http.ResponseWriter, r *http.Request) {
 		vars := mux.Vars(r)
